--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         :root {
             --primary-gold: #d9b382;
-            --dark-brown: #3d2e24; /* اللون القهوائي المطلوب */
+            --dark-brown: #3d2e24;
             --light-bg: #f9f6f2;
             --white: #ffffff;
         }
@@ -18,7 +18,7 @@
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Cairo', sans-serif; background-color: var(--white); color: var(--dark-brown); scroll-behavior: smooth; }
 
-        /* البنر العلوي القهوائي المطلوب [cite: 1, 10, 57] */
+        /* البنر العلوي القهوائي */
         .top-banner { 
             background: var(--dark-brown); 
             color: var(--white); 
@@ -30,7 +30,7 @@
         }
         .whatsapp-link-top { color: var(--white); text-decoration: none; font-weight: bold; }
 
-        /* الهيدر [cite: 2, 4, 5, 11] */
+        /* الهيدر */
         header { 
             background: rgba(255, 255, 255, 0.98); 
             backdrop-filter: blur(10px); 
@@ -45,39 +45,51 @@
         }
         .logo-img { height: 60px; cursor: pointer; }
         .nav-menu { display: flex; gap: 20px; list-style: none; }
-        .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; }
+        .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; transition: 0.3s; }
+        .nav-menu a:hover { color: var(--primary-gold); }
         .btn-calc { background: var(--primary-gold); color: white; border: none; padding: 10px 20px; border-radius: 8px; font-weight: bold; cursor: pointer; }
 
-        /* قسم الهيرو [cite: 6, 7, 8, 9] */
+        /* قسم الهيرو المحسن بالأيقونات */
         .hero { 
-            height: 80vh; 
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
+            height: 90vh; 
+            background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.55)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
             background-size: cover; background-position: center; 
             display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: var(--white); padding: 20px;
         }
         .hero h1 { font-size: clamp(30px, 6vw, 55px); font-weight: 900; margin-bottom: 20px; }
         .hero span { color: var(--primary-gold); }
+        .hero p { font-size: 1.2rem; margin-bottom: 30px; }
 
-        /* قسم الأقسام الضرورية [cite: 16, 17, 18, 19, 20, 21] */
+        .social-hero {
+            display: flex;
+            gap: 20px;
+            margin-top: 35px;
+        }
+        .social-hero a {
+            color: var(--white);
+            font-size: 1.8rem;
+            transition: 0.3s;
+        }
+        .social-hero a:hover {
+            color: var(--primary-gold);
+            transform: translateY(-5px);
+        }
+
+        /* الأقسام والمميزات */
         .section-padding { padding: 80px 5%; text-align: center; }
         .categories-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; margin-top: 40px; }
         .cat-card { position: relative; border-radius: 20px; overflow: hidden; height: 350px; box-shadow: 0 8px 20px rgba(0,0,0,0.1); }
         .cat-card img { width: 100%; height: 100%; object-fit: cover; }
-        .cat-label { position: absolute; bottom: 20px; right: 20px; background: rgba(0,0,0,0.6); color: white; padding: 5px 15px; border-radius: 5px; }
+        .cat-label { position: absolute; bottom: 20px; right: 20px; background: rgba(0,0,0,0.7); color: white; padding: 8px 20px; border-radius: 8px; font-weight: bold; }
 
-        /* قسم من نحن */
-        #aboutSection { background: var(--light-bg); display: none; }
-        .about-content { max-width: 900px; margin: auto; line-height: 2; font-size: 1.1rem; }
+        .about-content { max-width: 900px; margin: auto; line-height: 2; font-size: 1.2rem; text-align: justify; }
 
-        /* قسم المميزات [cite: 27, 28, 30, 31, 35] */
         .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; margin-top: 50px; }
-        .feature-item { background: white; padding: 30px; border-radius: 15px; text-align: center; }
+        .feature-item { background: white; padding: 30px; border-radius: 15px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
         .feature-item i { font-size: 2.5rem; color: var(--primary-gold); margin-bottom: 20px; }
 
-        /* الفوتر [cite: 43, 50, 53, 54, 55] */
         footer { background: var(--dark-brown); color: white; padding: 60px 5% 20px; }
         .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; }
-        .whatsapp-btn { background: #25D366; color: white; text-decoration: none; padding: 12px 25px; border-radius: 50px; display: inline-block; margin-top: 20px; font-weight: bold; }
 
         .page { display: none; }
         .active { display: block; }
@@ -105,60 +117,68 @@
         </div>
     </header>
 
-    <main id="homePage" class="active">
-        <section class="hero">
-            <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
-            <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية[cite: 6, 7].</p>
-            <div style="display:flex; gap:15px; margin-top:20px;">
-                <a href="https://wa.me/9647883002797" class="btn-calc" style="padding:15px 30px;">احسب سعر ستارتك الآن</a>
-                <a href="https://wa.me/9647883002797" class="btn-calc" style="background:none; border:2px solid white; padding:15px 30px;">طلب استشارة منزلية</a>
-            </div>
-        </section>
-
-        <section class="section-padding" id="categories">
-            <h2>أقسامنا</h2>
-            <p>اختر من بين مجموعتنا المتنوعة</p>
-            <div class="categories-grid" id="mainGrid">
+    <main id="mainContainer">
+        
+        <div id="homePage" class="active">
+            <section class="hero">
+                <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
+                <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية</p>
+                <div style="display:flex; gap:15px; margin-top:10px;">
+                    <a href="https://wa.me/9647883002797" class="btn-calc" style="padding:15px 30px;">احسب سعر ستارتك الآن</a>
+                    <a href="https://wa.me/9647883002797" class="btn-calc" style="background:none; border:2px solid white; padding:15px 30px;">طلب استشارة منزلية</a>
                 </div>
-        </section>
 
-        <section class="section-padding" style="background:#f9f6f2;">
-            <h2>لماذا شبابيك؟</h2>
-            <div class="features-grid">
-                <div class="feature-item"><i class="fa-solid fa-palette"></i><h3>تصاميم حصرية</h3><p>مجموعة من التصاميم العصرية والكلاسيكية[cite: 28, 29].</p></div>
-                <div class="feature-item"><i class="fa-solid fa-ruler-combined"></i><h3>مقاسات مخصصة</h3><p>تفصيل على حسب مقاسات نوافذك بدقة[cite: 30].</p></div>
-                <div class="feature-item"><i class="fa-solid fa-truck-fast"></i><h3>تركيب منزلي</h3><p>فريق متخصص لتركيب الستائر في منزلك[cite: 31, 32].</p></div>
-                <div class="feature-item"><i class="fa-solid fa-shield-halved"></i><h3>ضمان الجودة</h3><p>ضمان شامل على جميع منتجاتنا وخدماتنا[cite: 35, 36].</p></div>
+                <div class="social-hero">
+                    <a href="https://www.facebook.com/profile.php?id=61587692021311" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/shababek.curtains/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/@shababek.curtains?is_from_webapp=1&sender_device=pc" target="_blank"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://www.snapchat.com/add/shababek.curtains" target="_blank"><i class="fab fa-snapchat"></i></a>
+                    <a href="https://x.com/ShababekCurtain" target="_blank"><i class="fab fa-x-twitter"></i></a>
+                </div>
+            </section>
+
+            <section class="section-padding" id="categories">
+                <h2>أقسامنا</h2>
+                <p>اختر من بين مجموعتنا المتنوعة</p>
+                <div class="categories-grid" id="sectionsGrid"></div>
+            </section>
+
+            <section class="section-padding" style="background:#f9f6f2;">
+                <h2>لماذا شبابيك؟</h2>
+                <div class="features-grid">
+                    <div class="feature-item"><i class="fa-solid fa-palette"></i><h3>تصاميم حصرية</h3><p>مجموعة من التصاميم العصرية والكلاسيكية</p></div>
+                    <div class="feature-item"><i class="fa-solid fa-ruler-combined"></i><h3>مقاسات مخصصة</h3><p>تفصيل على حسب مقاسات نوافذك بدقة عالية</p></div>
+                    <div class="feature-item"><i class="fa-solid fa-truck-fast"></i><h3>تركيب منزلي</h3><p>فريق متخصص لتركيب الستائر في منزلك</p></div>
+                    <div class="feature-item"><i class="fa-solid fa-shield-halved"></i><h3>ضمان الجودة</h3><p>ضمان شامل على جميع منتجاتنا وخدماتنا</p></div>
+                </div>
+            </section>
+        </div>
+
+        <section id="aboutSection" class="section-padding" style="display:none;">
+            <div class="about-content">
+                <h2 style="margin-bottom:30px; text-align:center;">من نحن</h2>
+                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر ليست مجرد قطعة قماش، بل هي عنصر أساسي في تصميم المنزل يعكس ذوق أصحابه ويضيف لمسة من الأناقة والفخامة.</p>
+                <p style="margin-top:20px;">نقدم مجموعة واسعة تشمل البلاك أوت والشفافة والديكورية وستائر الرول، بأقمشة مستوردة من أفضل المصانع العالمية.</p>
             </div>
         </section>
     </main>
-
-    <section id="aboutSection" class="section-padding">
-        <div class="about-content">
-            <h2 style="margin-bottom:30px;">من نحن</h2>
-            <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر ليست مجرد قطعة قماش، بل هي عنصر أساسي في تصميم المنزل يعكس ذوق أصحابه ويضيف لمسة من الأناقة والفخامة.</p>
-            <p>نقدم مجموعة واسعة تشمل البلاك أوت والشفافة والديكورية وستائر الرول، بأقمشة مستوردة من أفضل المصانع العالمية.</p>
-        </div>
-    </section>
 
     <footer id="contact">
         <div class="footer-grid">
             <div>
                 <h3>شبابيك للستائر</h3>
-                <p>تقدم أفخم تشكيلة من الستائر المنزلية بأعلى جودة وأفضل الأسعار[cite: 43].</p>
-                <a href="https://wa.me/9647883002797" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> تواصل عبر واتساب</a>
-            </div>
-            <div>
-                <h3>روابط سريعة</h3>
-                <p>الرئيسية | المنتجات | من نحن [cite: 51, 52]</p>
+                <p>تقدم أفخم تشكيلة من الستائر المنزلية بأعلى جودة وأفضل الأسعار</p>
+                <a href="https://wa.me/9647883002797" style="background:#25D366; color:white; text-decoration:none; padding:12px 25px; border-radius:50px; display:inline-flex; align-items:center; gap:10px; margin-top:20px; font-weight:bold;">
+                    <i class="fab fa-whatsapp"></i> تواصل عبر واتساب
+                </a>
             </div>
             <div>
                 <h3>تواصل معنا</h3>
-                <p>العراق - بغداد [cite: 55]</p>
-                <p>+964 788 300 2797 [cite: 57]</p>
+                <p>العراق - بغداد</p>
+                <p dir="ltr">+964 788 300 2797</p>
             </div>
         </div>
-        <p style="text-align:center; margin-top:40px; opacity:0.6;">© 2025 شبابيك للستائر. جميع الحقوق محفوظة[cite: 53].</p>
+        <p style="text-align:center; margin-top:40px; opacity:0.6;">© 2025 شبابيك للستائر جميع الحقوق محفوظة</p>
     </footer>
 
     <div id="adminPage" class="page" style="padding: 100px 5%; text-align: center;">
@@ -173,18 +193,17 @@
     </div>
 
     <script>
-        // الأقسام الأساسية المطلوبة 
-        let sections = JSON.parse(localStorage.getItem("shababik_sections")) || [
-            {name: "ستائر بلاك أوت", img: "https://i.ibb.co/BDZvwyX3/curtain-blackout-BDZvwyX3.jpg"},
-            {name: "ستائر شفافة", img: "https://i.ibb.co/B6H5yJXx/curtain-sheer-B6H5yJXx.jpg"},
-            {name: "ستائر ديكور", img: "https://images.unsplash.com/photo-1513519245088-0e12902e5a38"},
-            {name: "ستائر رول", img: "https://i.ibb.co/5c189CRe/curtain-roller-5c189CRe.jpg"}
+        let currentSections = JSON.parse(localStorage.getItem("shababik_sections_v5")) || [
+            {name: "ستائر بلاك أوت", img: "https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg"},
+            {name: "ستائر شفافة", img: "https://i.ibb.co/23ypfxBq/curtain-sheer-B6-H5y-JXx.jpg"},
+            {name: "ستائر ديكور", img: "https://i.ibb.co/JRd7B9dC/42edce8e89a20200950e110c2d8d41b2.jpg"},
+            {name: "ستائر رول", img: "https://i.ibb.co/d4GXf0HM/curtain-roller-5c189-CRe.jpg"}
         ];
 
-        function showSection(id) {
-            document.getElementById('homePage').style.display = (id === 'home' || id === 'categories') ? 'block' : 'none';
-            document.getElementById('aboutSection').style.display = (id === 'about') ? 'block' : 'none';
-            if(id === 'categories') window.location.hash = 'categories';
+        function showSection(target) {
+            document.getElementById('homePage').style.display = (target === 'about') ? 'none' : 'block';
+            document.getElementById('aboutSection').style.display = (target === 'about') ? 'block' : 'none';
+            if(target === 'categories') window.location.hash = 'categories';
         }
 
         let clicks = 0;
@@ -193,8 +212,7 @@
             if(clicks >= 5) {
                 let p = prompt("كلمة المرور:");
                 if(p === "1234") {
-                    document.getElementById('homePage').style.display = 'none';
-                    document.getElementById('aboutSection').style.display = 'none';
+                    document.getElementById('mainContainer').style.display = 'none';
                     document.getElementById('adminPage').classList.add('active');
                     renderAdmin();
                 }
@@ -203,8 +221,8 @@
         }
 
         function renderSite() {
-            const grid = document.getElementById('mainGrid');
-            grid.innerHTML = sections.map(s => `
+            const grid = document.getElementById('sectionsGrid');
+            grid.innerHTML = currentSections.map(s => `
                 <div class="cat-card">
                     <img src="${s.img}" alt="${s.name}">
                     <div class="cat-label">${s.name}</div>
@@ -216,17 +234,18 @@
             const n = document.getElementById('pName').value;
             const i = document.getElementById('pImage').value;
             if(n && i) {
-                sections.push({name: n, img: i});
-                localStorage.setItem("shababik_sections", JSON.stringify(sections));
+                currentSections.push({name: n, img: i});
+                localStorage.setItem("shababik_sections_v5", JSON.stringify(currentSections));
                 renderSite(); renderAdmin();
-                document.getElementById('pName').value = ''; document.getElementById('pImage').value = '';
+                document.getElementById('pName').value = ''; 
+                document.getElementById('pImage').value = '';
             }
         }
 
         function renderAdmin() {
             const list = document.getElementById('adminList');
-            list.innerHTML = sections.map((s, i) => `
-                <div style="display:flex; justify-content:space-between; padding:5px; border-bottom:1px solid #ccc;">
+            list.innerHTML = currentSections.map((s, i) => `
+                <div style="display:flex; justify-content:space-between; padding:10px; border-bottom:1px solid #ccc;">
                     <span>${s.name}</span>
                     <button onclick="remove(${i})" style="color:red; cursor:pointer;">حذف</button>
                 </div>
@@ -234,8 +253,8 @@
         }
 
         function remove(index) {
-            sections.splice(index, 1);
-            localStorage.setItem("shababik_sections", JSON.stringify(sections));
+            currentSections.splice(index, 1);
+            localStorage.setItem("shababik_sections_v5", JSON.stringify(currentSections));
             renderAdmin(); renderSite();
         }
 
