--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         :root {
             --primary-gold: #d9b382;
-            --dark-brown: #3d2e24; /* اللون القهوائي الافتراضي */
+            --dark-brown: #3d2e24; /* اللون القهوائي من ملف Screenshot 2026-02-14 [cite: 58] */
             --white: #ffffff;
             --light-bg: #f9f6f2;
         }
@@ -18,7 +18,7 @@
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Cairo', sans-serif; background-color: var(--white); color: var(--dark-brown); scroll-behavior: smooth; overflow-x: hidden; }
 
-        /* البنر العلوي القهوائي */
+        /* البنر العلوي القهوائي [cite: 58] */
         .top-banner { 
             background: var(--dark-brown); 
             color: var(--white); 
@@ -44,11 +44,11 @@
             box-shadow: 0 2px 15px rgba(0,0,0,0.05); 
         }
         .logo-img { height: 45px; cursor: pointer; }
-        .nav-menu { display: flex; gap: 12px; list-style: none; }
-        .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; font-size: 0.85rem; }
+        .nav-menu { display: flex; gap: 15px; list-style: none; }
+        .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; font-size: 0.9rem; }
         .btn-calc { background: var(--primary-gold); color: white; border: none; padding: 8px 15px; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 0.8rem; }
 
-        /* قسم الهيرو (صورة ثابتة فقط) */
+        /* قسم الهيرو - صورة ثابتة فقط بدون أي فيديو [cite: 6] */
         .hero { 
             height: 75vh; 
             background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
@@ -58,18 +58,19 @@
         .hero h1 { font-size: clamp(24px, 5vw, 45px); font-weight: 900; margin-bottom: 15px; }
         .hero span { color: var(--primary-gold); }
 
+        /* أيقونات التواصل الاجتماعي في الهيرو  */
         .social-hero { display: flex; gap: 15px; margin-top: 25px; flex-wrap: wrap; justify-content: center; }
         .social-hero a { color: var(--white); font-size: 1.6rem; transition: 0.3s; text-decoration: none; }
         .social-hero a:hover { color: var(--primary-gold); transform: translateY(-3px); }
 
-        /* الأقسام والمميزات */
+        /* الأقسام والمميزات [cite: 16, 27] */
         .section-padding { padding: 50px 5%; text-align: center; }
         .categories-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 15px; margin-top: 30px; }
         .cat-card { position: relative; border-radius: 12px; overflow: hidden; height: 220px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
         .cat-card img { width: 100%; height: 100%; object-fit: cover; }
-        .cat-label { position: absolute; bottom: 10px; right: 10px; background: rgba(0,0,0,0.7); color: white; padding: 4px 10px; border-radius: 5px; font-size: 0.75rem; font-weight: bold; }
+        .cat-label { position: absolute; bottom: 10px; right: 10px; background: rgba(0,0,0,0.7); color: white; padding: 4px 10px; border-radius: 5px; font-size: 0.8rem; font-weight: bold; }
 
-        /* صفحة تواصل معنا */
+        /* صفحة تواصل معنا [cite: 67] */
         #contactSection { background: var(--white); display: none; }
         .contact-container { max-width: 1000px; margin: auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; padding: 20px; text-align: right; }
         .contact-info-box { background: var(--light-bg); padding: 25px; border-radius: 15px; }
@@ -77,7 +78,7 @@
         .contact-info-item i { color: var(--primary-gold); font-size: 1.1rem; }
         .contact-form input, .contact-form textarea { width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #ddd; border-radius: 8px; font-family: inherit; }
 
-        /* الفوتر القهوائي */
+        /* الفوتر القهوائي المصحح [cite: 105, 106] */
         footer { background: var(--dark-brown); color: white; padding: 40px 5% 15px; font-size: 0.85rem; }
         .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 25px; }
         .footer-box h3 { color: var(--white); margin-bottom: 12px; font-size: 1rem; }
@@ -89,41 +90,48 @@
 
         /* تجاوب الجوال */
         @media (max-width: 768px) {
-            .top-banner { font-size: 11px; flex-direction: column; gap: 5px; }
-            .nav-menu a { font-size: 0.75rem; }
-            .hero { height: 50vh; }
-            .hero h1 { font-size: 20px; }
+            .top-banner { font-size: 11px; flex-direction: column; gap: 5px; text-align: center; }
+            header { padding: 10px 3%; }
+            .nav-menu { gap: 10px; }
+            .nav-menu a { font-size: 0.8rem; }
+            .hero { height: 55vh; }
+            .hero h1 { font-size: 22px; }
+            .section-padding { padding: 30px 5%; }
+            .contact-container { grid-template-columns: 1fr; }
         }
+
+        .page { display: none; }
+        .active { display: block; }
     </style>
 </head>
 <body>
 
     <div class="top-banner">
-        <div>مرحباً بكم في شبابيك للستائر [cite: 1]</div>
+        <div>مرحباً بكم في شبابيك للستائر</div>
         <a href="https://wa.me/9647883002797" class="whatsapp-link-top">اطلب عبر الواتساب <i class="fab fa-whatsapp"></i></a>
     </div>
 
     <header>
-        <button class="btn-calc" onclick="location.href='https://wa.me/9647883002797'">احسب سعر ستارتك [cite: 11]</button>
+        <button class="btn-calc" onclick="location.href='https://wa.me/9647883002797'">احسب سعر ستارتك</button>
         <nav>
             <ul class="nav-menu">
-                <li><a onclick="showSection('home')">الرئيسية [cite: 13]</a></li>
-                <li><a onclick="showSection('categories')">المنتجات [cite: 14]</a></li>
-                <li><a onclick="showSection('about')">من نحن [cite: 14]</a></li>
-                <li><a onclick="showSection('contact')">تواصل معنا [cite: 14]</a></li>
+                <li><a onclick="showSection('home')">الرئيسية</a></li>
+                <li><a onclick="showSection('categories')">المنتجات</a></li>
+                <li><a onclick="showSection('about')">من نحن</a></li>
+                <li><a onclick="showSection('contact')">تواصل معنا</a></li>
             </ul>
         </nav>
         <div onclick="checkAdminClick()">
-            <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" alt="شبابيك [cite: 12]">
+            <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" alt="شبابيك">
         </div>
     </header>
 
     <main id="mainContainer">
         <div id="homePage" class="active">
             <section class="hero">
-                <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span> </h1>
+                <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
                 <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية [cite: 7]</p>
-                <div style="display:flex; gap:10px; justify-content:center;">
+                <div style="display:flex; gap:10px; flex-wrap:wrap; justify-content:center;">
                     <a href="https://wa.me/9647883002797" class="btn-calc" style="padding:12px 25px; font-size:0.95rem;">احسب سعر ستارتك الآن [cite: 8]</a>
                 </div>
 
@@ -138,7 +146,7 @@
             </section>
 
             <section class="section-padding" id="categories">
-                <h2>أقسامنا </h2>
+                <h2>أقسامنا</h2>
                 <div class="categories-grid">
                     <div class="cat-card"><img src="https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg"><div class="cat-label">بلاك أوت [cite: 18]</div></div>
                     <div class="cat-card"><img src="https://i.ibb.co/23ypfxBq/curtain-sheer-B6-H5y-JXx.jpg"><div class="cat-label">شفافة [cite: 19]</div></div>
@@ -148,7 +156,7 @@
             </section>
 
             <section class="section-padding" style="background:var(--light-bg);">
-                <h2>لماذا شبابيك؟ [cite: 27]</h2>
+                <h2>لماذا شبابيك؟</h2>
                 <div class="categories-grid" style="grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));">
                     <div class="feature-item"><i class="fa-solid fa-palette"></i><h3>تصاميم حصرية [cite: 28]</h3></div>
                     <div class="feature-item"><i class="fa-solid fa-ruler-combined"></i><h3>مقاسات مخصصة [cite: 30]</h3></div>
@@ -160,13 +168,13 @@
 
         <section id="aboutSection" class="section-padding page">
             <div style="max-width:800px; margin:auto; text-align:justify; line-height:1.8;">
-                <h2 style="text-align:center; margin-bottom:20px;">من نحن </h2>
-                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق[cite: 43]. نؤمن بأن الستائر عنصر أساسي يعكس ذوق أصحاب المنزل[cite: 43].</p>
+                <h2 style="text-align:center; margin-bottom:20px;">من نحن</h2>
+                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر عنصر أساسي يعكس ذوق أصحاب المنزل ويضيف لمسة من الأناقة والفخامة.</p>
             </div>
         </section>
 
         <section id="contactSection" class="section-padding page">
-            <h2>تواصل معنا [cite: 67]</h2>
+            <h2>تواصل معنا</h2>
             <div class="contact-container">
                 <div class="contact-form">
                     <h3>أرسل لنا رسالة [cite: 69]</h3>
@@ -175,7 +183,7 @@
                     <button class="btn-calc" style="width:100%; padding:15px;" onclick="window.location.href='https://wa.me/9647883002797'">إرسال عبر واتساب [cite: 74]</button>
                 </div>
                 <div class="contact-info-box">
-                    <div class="contact-info-item"><i class="fa-solid fa-location-dot"></i> <div><strong>العنوان [cite: 59]</strong><br>العراق - بغداد [cite: 59]</div></div>
+                    <div class="contact-info-item"><i class="fa-solid fa-location-dot"></i> <div><strong>العنوان [cite: 59]</strong><br>العراق - بغداد</div></div>
                     <div class="contact-info-item"><i class="fa-solid fa-phone"></i> <div><strong>الهاتف [cite: 60]</strong><br>+964 788 300 2797 [cite: 61]</div></div>
                     <div class="contact-info-item"><i class="fa-solid fa-clock"></i> <div><strong>ساعات العمل [cite: 64]</strong><br>السبت - الخميس 9 ص - 9 م [cite: 65]</div></div>
                 </div>
@@ -183,12 +191,12 @@
         </section>
     </main>
 
-    <footer>
+    <footer id="footer">
         <div class="footer-grid">
             <div class="footer-box">
-                <h3>شبابيك للستائر [cite: 98]</h3>
-                <p>نقدم أفخم تشكيلة ستائر منزلية بأعلى جودة[cite: 100].</p>
-                <a href="https://wa.me/9647883002797" class="whatsapp-footer-btn"><i class="fab fa-whatsapp"></i> واتساب [cite: 108]</a>
+                <h3>شبابيك للستائر</h3>
+                <p>نقدم أفخم تشكيلة ستائر منزلية بأعلى جودة. خبرة طويلة في التصميم والتركيب[cite: 100].</p>
+                <a href="https://wa.me/9647883002797" class="whatsapp-footer-btn"><i class="fab fa-whatsapp"></i> واتساب [cite: 62]</a>
             </div>
             <div class="footer-box">
                 <h3>روابط سريعة [cite: 99]</h3>
@@ -201,7 +209,7 @@
             <div class="footer-box">
                 <h3>تواصل معنا [cite: 106]</h3>
                 <p><i class="fa-solid fa-location-dot"></i> العراق - بغداد [cite: 107]</p>
-                <p><i class="fa-solid fa-phone"></i> +964 788 300 2797 [cite: 109]</p>
+                <p><i class="fa-solid fa-phone"></i> +964 788 300 2797</p>
             </div>
         </div>
         <p style="text-align:center; margin-top:30px; opacity:0.5; border-top:1px solid rgba(255,255,255,0.1); padding-top:15px;">© 2025 شبابيك للستائر جميع الحقوق محفوظة[cite: 105].</p>
@@ -211,7 +219,10 @@
         function showSection(id) {
             document.querySelectorAll('main > div, main > section').forEach(s => s.style.display = 'none');
             if(id === 'home') document.getElementById('homePage').style.display = 'block';
-            else if(id === 'categories') { document.getElementById('homePage').style.display = 'block'; document.getElementById('categories').scrollIntoView(); }
+            else if(id === 'categories') { 
+                document.getElementById('homePage').style.display = 'block'; 
+                document.getElementById('categories').scrollIntoView(); 
+            }
             else document.getElementById(id + 'Section').style.display = 'block';
             window.scrollTo(0,0);
         }
